BUG-868: Prevent overflowing flex item

--- a/sass/web.arbeit/modules/article/_article-heading--podcast.sass
+++ b/sass/web.arbeit/modules/article/_article-heading--podcast.sass
@@ -71,8 +71,6 @@
 			&--podcast
 				font-size: remify(60px)
 				margin-bottom: 0
-				overflow: hidden
-				text-overflow: ellipsis
 		&__podcast-player
 			margin-bottom: remify(60px)
 
